--- a/presentacion.html
+++ b/presentacion.html
@@ -33,18 +33,35 @@
                 <li><a href="#">Como Jugar</a></li>
                 <li><a href="#">Ranking</a></li>
                 <li><a href="#">Soporte</a></li>
-                <li><a href="presentacion.html">Autor</a></li>
+                <li><a href="#">Autor</a></li>
             </ul>
         </nav>
     </header>
     
     <main class="contenedor">
-
-        <h2 class="titulo">Juego de Batalla Pokemon</h2>
-        <h3 class="subtitulo">Selecciona tu Pokemon</h3>
-
-        <button class="btn">Empezar</button>
-
+        <hgroup>
+            <h2 class="titulo">Rafael Castillo</h2>
+            <h5 class="subtitulo">UX/UI Designer</h5>
+        </hgroup>
+        <div class="info">
+            <div class="avatar">
+                <img src="assets/images/profile.png" alt="Foto de perfil">
+                <ul>
+                    <li><a href="#">yt</a></li>
+                    <li><a href="#">tt</a></li>
+                    <li><a href="#">gh</a></li>
+                    <li><a href="#">fb</a></li>
+                </ul>
+            </div>
+            <div class="desc">
+                <h3 class="subtitulo">El Autor</h3>
+                <p>A passionate and highly creative web designer with extensive experience in both design and development. With 7+ years remote experience, I specialize in CSS and Figma, ensuring top-notch designs and seamless user experiences.</p>
+                <h5 class="fw-bold">Contacto:</h5>
+                <p>Si tienes alguna pregunta o necesitas asistencia, no dudes en contactarme:</p>
+                <a href="#">rafaelcastilloac89@gmail.com</a>
+            </div>
+        </div>
+        
     </main>
 
     <footer>
