--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="contenedor">
         <nav class="menu ">
             <div class="view-menu">
-                <a href="#" class="brand">
+                <a href="/" class="brand">
                     <img src="/assets/images/pokeball.ico" alt="">
                     PKMN Battle
                 </a>
@@ -46,7 +46,7 @@
                     </form>
                 </div>
             </section>
-            <button id="btn-nombre" class="btn" disabled> Vamos allá! </button>
+            <button id="btn-nombre" class="btn btn-next" disabled> Vamos allá! </button>
         </div>
         <div id="seleccionar-pkmn" style="display: none;">
             <section class="margin-y">
@@ -75,7 +75,7 @@
                     <h4>Pikachu</h4>
                 </div>
             </section>
-            <button id="btn-seleccionar" class="btn" disabled>Empezar</button>
+            <button id="btn-seleccionar" class="btn btn-next" disabled>Empezar</button>
         </div>
         <div id="resultado" style="display: none;">
             <section class="margin-y">
@@ -88,7 +88,7 @@
                     <h6 class="fw-bold"> 15646561 puntos </h6>
                 </div>
             </section>
-            <button id="pkmn-seleccionado" class="btn" >Volver a jugar</button>
+            <button id="pkmn-seleccionado" class="btn btn-next" >Volver a jugar</button>
         </div>
     </main>
 
