--- a/presentacion.html
+++ b/presentacion.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon Game - Simulator</title>
+    <title>Presentacion Pokemon Game - Simulator</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/pokeball.ico">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
