--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Game - Simulator</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/pokeball.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/images/pokeball.ico">
     
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -13,8 +13,8 @@
     <header class="contenedor">
         <nav class="menu ">
             <div class="view-menu">
-                <a href="/" class="brand">
-                    <img src="/assets/images/pokeball.ico" alt="">
+                <a href="./" class="brand">
+                    <img src="./assets/images/pokeball.ico" alt="">
                     PKMN Battle
                 </a>
                 <button class="menu-btn" aria-label="Toggle Menu">
@@ -55,22 +55,22 @@
             </section>
             <section class="pokemon-container">
                 <div class="pokemon-card" data-pokemon="charmander">
-                    <img src="/assets/images/pic-char.png" alt="Charmander">
+                    <img src="./assets/images/pic-char.png" alt="Charmander">
                     <p class="tipo"> Fuego </p>
                     <h4> Charmander</h4>
                 </div>
                 <div class="pokemon-card" data-pokemon="squirtle">
-                    <img src="/assets/images/pic-squi.png" alt="Squirtle">
+                    <img src="./assets/images/pic-squi.png" alt="Squirtle">
                     <p class="tipo">Agua</p>
                     <h4> Squirtle </h4>
                 </div>
                 <div class="pokemon-card" data-pokemon="bulbasaur">
-                    <img src="/assets/images/pic-bulb.png" alt="Bulbasaur">
+                    <img src="./assets/images/pic-bulb.png" alt="Bulbasaur">
                     <p class="tipo">Planta</p>
                     <h4> Bulbasaur </h4>
                 </div>
                 <div class="pokemon-card" data-pokemon="pikachu">
-                    <img src="/assets/images/pic-pika.png" alt="Pikachu">
+                    <img src="./assets/images/pic-pika.png" alt="Pikachu">
                     <p class="tipo">Eléctrico</p>
                     <h4>Pikachu</h4>
                 </div>
