--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             </section>
             <section class="nombre-container">
                 <div class="input-group margin-y">
-                    <form>
+                    <form id="form-nombre">
                         <input id="nombreUsuario" type="text" class="nombreUsuario"  placeholder="Tu Nombre" required>
+                        <button id="btn-nombre" class="btn btn-next" type="submit" disabled> Vamos allá! </button>
                     </form>
                 </div>
             </section>
-            <button id="btn-nombre" class="btn btn-next" disabled> Vamos allá! </button>
         </div>
         <div id="seleccionar-pkmn" style="display: none;">
             <section class="margin-y">
