--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 
             </div>
             <ul class="menu-items">
-                <li><a href="#">Como Jugar</a></li>
-                <li><a href="#">Ranking</a></li>
-                <li><a href="#">Soporte</a></li>
+                <li><a href="#"> Como Jugar </a></li>
+                <li><a href="#"> Ranking </a></li>                
                 <li><a href="presentacion.html">Autor</a></li>
             </ul>
         </nav>
@@ -125,13 +124,13 @@
                 <div class="moves">
                     <div class="subtitulo txt-center">Selecciona tu movimiento</div>
                     <div class="ataques ">
-                        <button class="ataque-a tipo">
-                            <div class="icono"><span>☀️</span></div>
-                            <div class="movimiento">Impactrueno</div>
+                        <button class="btn ataque-a tipo">
+                            <div class="icono"><span>🔥</span></div>
+                            <div class="movimiento">Ataque A</div>
                         </button>
-                        <button class="ataque-b tipo">
-                            <div class="icono"><span>☀️</span></div>
-                            <div class="movimiento">Impactrueno</div>
+                        <button class="btn ataque-b tipo">
+                            <div class="icono"><span>💧</span></div>
+                            <div class="movimiento">Ataque B</div>
                         </button>
                     </div>
                 </div>
