--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
                 <div class="moves">
                     <div class="subtitulo txt-center">Selecciona tu movimiento</div>
                     <div class="ataques">
-                        <button class="btn ataque-a tipo" id="ataqueA">
-                            <div class="icono"><i class="bi bi-disc"></i></div>
-                            <div class="movimiento">Ataque A</div>
+                        <button class="btn ataque-a tipo" id="ataqueA"> 
+                            movimiento
                         </button> 
                     </div>
                     <div class="margin-y">
