--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <div class="hgroup">
                     <h2 class="titulo">Bien Hecho  <span id="entrenador" class="entrenador"></span> </h2>
                 </div>
+                <div id="battle-log" class="battle-log"></div>
                 <div class="marcador">
                     <h3 class="heading">Batalla No. <span id="numero-batalla">  00 </span></h3>
                     <h3 class="heading">Puntos: <span id="puntos"> 00 </span></h3>
@@ -126,7 +127,6 @@
                     </div>
                 </div>
 
-                <div id="battle-log"></div>
             </div>
         </div>
         <div id="resultado" style="display: none;">
