--- a/presentacion.html
+++ b/presentacion.html
@@ -36,7 +36,7 @@
                 <li><a href="#">Como Jugar</a></li>
                 <li><a href="#">Ranking</a></li>
                 <li><a href="#">Soporte</a></li>
-                <li><a href="#">Autor</a></li>
+                <li class="active"><a >Autor</a></li>
             </ul>
         </nav>
     </header>
@@ -94,7 +94,7 @@
     </main>
 
     <footer>
-        <p>©️ 2024</p>
+        <p class="fw-bold">©️ 2024</p>
     </footer>
     <script src="app.js"></script>
 </body>
