restore and fix

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <main class="contenedor">
         <div id="onboarding" style="display: block;">
             <section class="margin-y">
-                <h2 class="titulo">Bienvenido al Juego de Batalla Pokemon</h2>
+                <h2 class="titulo">¡Bienvenido al Juego de Batalla Pokémon!</h2>
             </section>
             <div class="margin-y txt-center">
-                <p>Architecto ullam provident at sit adipisci consequuntur mollitia ratione officia inventore est amet, ex quidem distinctio labore.</p>
-                <p>Laboriosam in molestias voluptatem! Libero ea nostrum fugit dolorem id nesciunt at quisquam perspiciatis modi!</p>
+                <p>¿Estás listo para convertirte en el mejor entrenador Pokémon? En este emocionante juego por turnos, tu objetivo es ganar tantas batallas como puedas.</p>
+                <p>Enfréntate a diversos rivales y utiliza tus mejores estrategias para alcanzar la victoria. ¡Acepta el desafío y demuestra tu habilidad como entrenador!</p>
             </div>
             <button id="btn-avanzar" class="btn btn-next"> Vamos allá! </button>
         </div>
