--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="menu ">
             <ul class="menu-items">
                 <li><a href="#"> Como Jugar </a></li>
-                <li><a href="#"> Ranking </a></li>                
+                <li><a href="ranking.html"> Ranking </a></li>                
                 <li><a href="presentacion.html">Autor</a></li>
             </ul>
             <div class="view-menu">
@@ -141,10 +141,10 @@
             </section>
             <section class="resultado-container">
                 <div class="margin-y">
-                    <h2 class="titulo"> <span class="puntos">306</span> Puntos </h2>
-                    <h2 class="titulo"><span class="vitorias">0</span> Victorias</h2>
+                    <h2 class="titulo"> <span class="puntos">306</span> Victorias </h2>
+                    <h2 class="titulo"><span id="recordActual" ></span> Es tu record</h2>
                 </div>
-                <button  class="btn  margin-y btn-limpiar margin-x-auto"> <i class="bi bi-clock"></i> Limpiar LocalStorage </button>
+                <button  class="btn  margin-y btn-limpiar margin-x-auto "> <i class="bi bi-clock"></i> Volver a jugar </button>
             </section>
             
         </div>
