--- a/presentacion.html
+++ b/presentacion.html
@@ -15,7 +15,7 @@
         <nav class="menu ">
             <ul class="menu-items">
                 <li><a href="#"> Como Jugar </a></li>
-                <li><a href="#"> Ranking </a></li>                
+                <li><a href="ranking.html"> Ranking </a></li>                
                 <li class="current"><a href="presentacion.html">Autor</a></li>
             </ul>
             <div class="view-menu">
@@ -91,13 +91,13 @@
                 <ul class="inline">
                     <li><img src="https://cdn.worldvectorlogo.com/logos/html-1.svg" alt="HTML5" width="50" title="HTML"></li>
                     <li><img src="https://cdn.worldvectorlogo.com/logos/css-3.svg" alt="CSS3" width="50" title="CSS"></li>
+                    <li><img src="https://cdn.worldvectorlogo.com/logos/javascript-1.svg" alt="JavaScript" width="50" title="JavaScript"></li>
                     <li><img src="https://cdn.worldvectorlogo.com/logos/bootstrap-4.svg" alt="Bootstrap" width="50" title="Bootstrap"></li>
                     <li><img src="https://cdn.worldvectorlogo.com/logos/tailwind-css-2.svg" alt="Tailwind" width="50" title="Tailwind"></li>
-                    <li><img src="https://cdn.worldvectorlogo.com/logos/react-2.svg" alt="React.js" width="50" title="React"></li>
                     <li><img src="https://cdn.worldvectorlogo.com/logos/wordpress-icon-1.svg" alt="WordPress" width="50" title="WordPress"></li>
-                    <li><img src="https://cdn.worldvectorlogo.com/logos/xampp.svg" alt="PHP" width="50" title="PHP"></li>
-                    <li><img src="https://cdn.worldvectorlogo.com/logos/unity-69.svg" alt="Unity" width="50" title="Unity 3D"></li>
-                    <li><img src="https://cdn.worldvectorlogo.com/logos/c--4.svg" alt="C#" width="50" title="C#"></li>
+                    <li><img src="https://cdn.worldvectorlogo.com/logos/xampp.svg" alt="XAMP" width="50" title="XAMP"></li>
+                    <li><img src="https://cdn.worldvectorlogo.com/logos/adobe-photoshop-2.svg" alt="Adobe Photoshop" width="50" title="Adobe Photoshop"></li>
+                    <li><img src="https://cdn.worldvectorlogo.com/logos/adobe-xd-2.svg" alt="Adobe XD" width="50" title="Adobe XD"></li>
                     <li><img src="https://cdn.worldvectorlogo.com/logos/figma-icon.svg" alt="Figma" width="50" title="Figma"></li>
                 </ul>
                 <p>Estas herramientas me permiten diseñar y desarrollar interfaces de usuario que son tanto estéticamente agradables como funcionales, garantizando una experiencia de usuario excepcional en cada proyecto.</p>
